no more hardocore

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </p>
     <p>Current record in Minecraft hardcore is 2 years on Season 4. 31.10.2021 - 29.02.2024
     </p>
-    <p>Current Minecraft hardocore run is still ongoing started in 3.3.2024 and on my way to break my record!
+    <p>Current Minecraft hardcore run is still ongoing started in 3.3.2024 and on my way to break my record!
     </p>
 </body>
 </html>
