--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 <body>
     <h1>Games</h1>
-    <p>Minecraft Java, Cs2, Css, Cs1.6, Hldm, TitanFall 2, Dayz, Rocket League, Portal 2, Battlefield 4, and many more.
+    <p>Minecraft Java, Cs2, Css, Cs1.6, Hldm, TitanFall 2, Dayz, Rocket League, Portal 2, Battlefield 4, Overwatch 2 and many more.
     </p>
     <p>Current record in Minecraft hardcore is 2 years on Season 4. 31.10.2021 - 29.02.2024
     </p>
